# python-client

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  codegen-check.yml  docs.yml  release.yml
api/: index.html
datasets/: index.html
docs/: api.md  datasets.md  index.md  quickstart.md
docs/recipes/: funding-duckdb.md  ohlcv-polars.md  orderflow-metrics.md
examples/: 01_list_datasets.py  02_load_one_month_polars.py  03_multi_month_lazy.py  04_duckdb_sql.py  05_async_concurrent.py
quickstart/: index.html
recipes/funding-duckdb/: index.html
recipes/ohlcv-polars/: index.html
recipes/orderflow-metrics/: index.html
scripts/: gen_models.py
search/: search_index.json
src/tessera/: __init__.py  _base.py  _resolver.py  async_client.py  client.py  config.py  errors.py  models.py
src/tessera/_generated/: __init__.py  models.py
src/tessera/readers/: __init__.py  _common.py  duckdb.py  polars.py
tests/: conftest.py  test_async_client.py  test_client.py  test_codegen_drift.py  test_errors.py  test_models.py  test_readers.py  test_retries.py
