[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-api"
description = "High-performance Python client for the Tessera API — Hyperliquid datasets straight into Polars & DuckDB."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [{ name = "Tessera", email = "hello@tesseralytics.dev" }]
keywords = [
    "hyperliquid",
    "crypto",
    "trading",
    "market-data",
    "ohlcv",
    "funding-rates",
    "polars",
    "duckdb",
    "parquet",
    "quant",
    "backtesting",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://tesseralytics.dev"
Documentation = "https://tesseralytics.dev/python-client"
Source = "https://github.com/tesseralytics/python-client"
Issues = "https://github.com/tesseralytics/python-client/issues"

[project.optional-dependencies]
polars = ["polars>=1.0"]
duckdb = ["duckdb>=1.0"]
pandas = ["pandas>=2.0", "pyarrow>=15.0"]
all = ["tessera-api[polars,duckdb,pandas]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "datamodel-code-generator>=0.26",
    "polars>=1.0",
    "duckdb>=1.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[tool.hatch.version]
path = "src/tessera/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# Generated code is formatted by datamodel-code-generator (black/isort); leave it alone
# so the codegen-drift test stays deterministic.
extend-exclude = ["src/tessera/_generated"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
[tool.ruff.lint.per-file-ignores]
"examples/*" = ["T201"]

[tool.pyright]
include = ["src/tessera"]
exclude = ["src/tessera/_generated", "**/__pycache__"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
# optional extras (polars/duckdb/pandas) may be absent / ship no stubs
reportMissingImports = false
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-ra"

[tool.uv]
default-groups = ["dev"]
